READMEファイルの変更

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Schedule Helper For N/S Students",
-	"description": "チャプター内の動画を見終えるまでにかかる時間を表示します",
-	"manifest_version": 3,
+	"description": "ページ内の動画を見終えるまでにかかる時間を表示します",
+	"author": "Adr204",
 	"version": "1.2.4",
+	"manifest_version": 3,
   "action": {
-    "default_icon": "images/calender_white_16.png",
+    "default_icon": "images/calender_white.png",
     "default_title": "click Me!",
     "default_popup": "popup.html"
   },
